编译原理/lab1/parser.output
Terminals unused in grammar

   SWITCH
   CASE
   COLON
   DEFAULT
   EXP_DPLUS
   EXP_DMINUS
   DPLUS_EXP
   DMINUS_EXP
   PLUS_ASSIGNOP
   MINUS_ASSIGNOP
   STAR_ASSIGNOP
   DIV_ASSIGNOP
   ARRAY_DEF
   ARRAY_READ
   STRUCT_READ
   EXT_DEF_LIST
   EXT_VAR_DEF
   FUNC_DEF
   FUNC_DEC
   EXT_DEC_LIST
   PARAM_LIST
   PARAM_DEC
   VAR_DEF
   DEC_LIST
   DEF_LIST
   COMP_STM
   STM_LIST
   EXP_STMT
   IF_THEN
   IF_THEN_ELSE
   STRUCTNAME
   STRUCT_DEF
   STRUCT_DEC
   FUNC_CALL
   ARGS
   FUNCTION
   PARAM
   ARG
   CALL
   LABEL
   GOTO
   JLT
   JLE
   JGT
   JGE
   EQ
   NEQ


State 79 conflicts: 11 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FuncDec CompSt
    7       | error SEMI

    8 StructSpecifier: STRUCT StructName LC DefList RC
    9                | STRUCT ID

   10 StructName: /* empty */
   11           | ID

   12 Specifier: TYPE
   13          | StructSpecifier

   14 ExtDecList: VarDec
   15           | VarDec COMMA ExtDecList

   16 VarDec: ID
   17       | VarDec LB Exp RB

   18 FuncDec: ID LP VarList RP
   19        | ID LP RP

   20 VarList: ParamDec
   21        | ParamDec COMMA VarList

   22 ParamDec: Specifier VarDec

   23 CompSt: LC DefList StmList RC

   24 StmList: /* empty */
   25        | Stmt StmList

   26 Stmt: Exp SEMI
   27     | CompSt
   28     | RETURN Exp SEMI
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt
   31     | WHILE LP Exp RP Stmt
   32     | BREAK SEMI
   33     | CONTINUE SEMI
   34     | FOR LP Exp SEMI Exp SEMI Exp RP
   35     | SEMI

   36 DefList: /* empty */
   37        | Def DefList
   38        | error SEMI

   39 Def: Specifier DecList SEMI

   40 DecList: Dec
   41        | Dec COMMA DecList

   42 Dec: VarDec
   43    | VarDec ASSIGNOP Exp

   44 Exp: Exp ASSIGNOP Exp
   45    | Exp AND Exp
   46    | Exp OR Exp
   47    | Exp RELOP Exp
   48    | Exp PLUS Exp
   49    | Exp MINUS Exp
   50    | Exp STAR Exp
   51    | Exp DIV Exp
   52    | Exp PLUS ASSIGNOP Exp
   53    | Exp MINUS ASSIGNOP Exp
   54    | Exp STAR ASSIGNOP Exp
   55    | Exp DIV ASSIGNOP Exp
   56    | Exp DPLUS
   57    | Exp DMINUS
   58    | DPLUS Exp
   59    | DMINUS Exp
   60    | LP Exp RP
   61    | MINUS Exp
   62    | NOT Exp
   63    | ID LP Args RP
   64    | ID LP RP
   65    | ID
   66    | INT
   67    | FLOAT
   68    | CHAR
   69    | STRING
   70    | Exp LB Exp RB
   71    | Exp DOT ID
   72    | LC Args RC

   73 Args: Exp COMMA Args
   74     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 38
INT (258) 66
ID (259) 9 11 16 18 19 63 64 65 71
RELOP (260) 47
TYPE (261) 12
FLOAT (262) 67
CHAR (263) 68
STRING (264) 69
LP (265) 18 19 29 30 31 34 60 63 64
RP (266) 18 19 29 30 31 34 60 63 64
LC (267) 8 23 72
RC (268) 8 23 72
SEMI (269) 4 5 7 26 28 32 33 34 35 38 39
COMMA (270) 15 21 41 73
PLUS (271) 48 52
MINUS (272) 49 53 61
STAR (273) 50 54
DIV (274) 51 55
ASSIGNOP (275) 43 44 52 53 54 55
AND (276) 45
OR (277) 46
NOT (278) 62
IF (279) 29 30
ELSE (280) 30
WHILE (281) 31
RETURN (282) 28
FOR (283) 34
SWITCH (284)
CASE (285)
COLON (286)
DEFAULT (287)
LB (288) 17 70
RB (289) 17 70
DPLUS (290) 56 58
DMINUS (291) 57 59
EXP_DPLUS (292)
EXP_DMINUS (293)
DPLUS_EXP (294)
DMINUS_EXP (295)
PLUS_ASSIGNOP (296)
MINUS_ASSIGNOP (297)
STAR_ASSIGNOP (298)
DIV_ASSIGNOP (299)
ARRAY_DEF (300)
ARRAY_READ (301)
BREAK (302) 32
CONTINUE (303) 33
DOT (304) 71
STRUCT (305) 8 9
STRUCT_READ (306)
EXT_DEF_LIST (307)
EXT_VAR_DEF (308)
FUNC_DEF (309)
FUNC_DEC (310)
EXT_DEC_LIST (311)
PARAM_LIST (312)
PARAM_DEC (313)
VAR_DEF (314)
DEC_LIST (315)
DEF_LIST (316)
COMP_STM (317)
STM_LIST (318)
EXP_STMT (319)
IF_THEN (320)
IF_THEN_ELSE (321)
STRUCTNAME (322)
STRUCT_DEF (323)
STRUCT_DEC (324)
FUNC_CALL (325)
ARGS (326)
FUNCTION (327)
PARAM (328)
ARG (329)
CALL (330)
LABEL (331)
GOTO (332)
JLT (333)
JLE (334)
JGT (335)
JGE (336)
EQ (337)
NEQ (338)
UMINUS (339)
LOWER_THEN_ELSE (340)


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
program (87)
    on left: 1, on right: 0
ExtDefList (88)
    on left: 2 3, on right: 1 3
ExtDef (89)
    on left: 4 5 6 7, on right: 3
StructSpecifier (90)
    on left: 8 9, on right: 13
StructName (91)
    on left: 10 11, on right: 8
Specifier (92)
    on left: 12 13, on right: 4 5 6 22 39
ExtDecList (93)
    on left: 14 15, on right: 4 15
VarDec (94)
    on left: 16 17, on right: 14 15 17 22 42 43
FuncDec (95)
    on left: 18 19, on right: 6
VarList (96)
    on left: 20 21, on right: 18 21
ParamDec (97)
    on left: 22, on right: 20 21
CompSt (98)
    on left: 23, on right: 6 27
StmList (99)
    on left: 24 25, on right: 23 25
Stmt (100)
    on left: 26 27 28 29 30 31 32 33 34 35, on right: 25 29 30 31
DefList (101)
    on left: 36 37 38, on right: 8 23 37
Def (102)
    on left: 39, on right: 37
DecList (103)
    on left: 40 41, on right: 39 41
Dec (104)
    on left: 42 43, on right: 40 41
Exp (105)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63 64 65 66 67 68 69 70 71 72, on right: 17 26 28 29 30 31 34
    43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 70
    71 73 74
Args (106)
    on left: 73 74, on right: 63 72 73


state 0

    0 $accept: . program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    StructSpecifier  go to state 7
    Specifier        go to state 8


state 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


state 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


state 3

    8 StructSpecifier: STRUCT . StructName LC DefList RC
    9                | STRUCT . ID

    ID  shift, and go to state 10

    $default  reduce using rule 10 (StructName)

    StructName  go to state 11


state 4

    0 $accept: program . $end

    $end  shift, and go to state 12


state 5

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


state 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 6
    StructSpecifier  go to state 7
    Specifier        go to state 8


state 7

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


state 8

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FuncDec CompSt

    ID    shift, and go to state 14
    SEMI  shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FuncDec     go to state 18


state 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


state 10

    9 StructSpecifier: STRUCT ID .
   11 StructName: ID .

    LC        reduce using rule 11 (StructName)
    $default  reduce using rule 9 (StructSpecifier)


state 11

    8 StructSpecifier: STRUCT StructName . LC DefList RC

    LC  shift, and go to state 19


state 12

    0 $accept: program $end .

    $default  accept


state 13

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 14

   16 VarDec: ID .
   18 FuncDec: ID . LP VarList RP
   19        | ID . LP RP

    LP  shift, and go to state 20

    $default  reduce using rule 16 (VarDec)


state 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 21


state 17

   14 ExtDecList: VarDec .
   15           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB Exp RB

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 14 (ExtDecList)


state 18

    6 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 24

    CompSt  go to state 25


state 19

    8 StructSpecifier: STRUCT StructName LC . DefList RC

    error   shift, and go to state 26
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 36 (DefList)

    StructSpecifier  go to state 7
    Specifier        go to state 27
    DefList          go to state 28
    Def              go to state 29


state 20

   18 FuncDec: ID LP . VarList RP
   19        | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 30
    STRUCT  shift, and go to state 3

    StructSpecifier  go to state 7
    Specifier        go to state 31
    VarList          go to state 32
    ParamDec         go to state 33


state 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 22

   15 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 35
    VarDec      go to state 17


state 23

   17 VarDec: VarDec LB . Exp RB

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    STRING  shift, and go to state 40
    LP      shift, and go to state 41
    LC      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44
    DPLUS   shift, and go to state 45
    DMINUS  shift, and go to state 46

    Exp  go to state 47


state 24

   23 CompSt: LC . DefList StmList RC

    error   shift, and go to state 26
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT       reduce using rule 36 (DefList)
    ID        reduce using rule 36 (DefList)
    FLOAT     reduce using rule 36 (DefList)
    CHAR      reduce using rule 36 (DefList)
    STRING    reduce using rule 36 (DefList)
    LP        reduce using rule 36 (DefList)
    LC        reduce using rule 36 (DefList)
    RC        reduce using rule 36 (DefList)
    SEMI      reduce using rule 36 (DefList)
    MINUS     reduce using rule 36 (DefList)
    NOT       reduce using rule 36 (DefList)
    IF        reduce using rule 36 (DefList)
    WHILE     reduce using rule 36 (DefList)
    RETURN    reduce using rule 36 (DefList)
    FOR       reduce using rule 36 (DefList)
    DPLUS     reduce using rule 36 (DefList)
    DMINUS    reduce using rule 36 (DefList)
    BREAK     reduce using rule 36 (DefList)
    CONTINUE  reduce using rule 36 (DefList)

    StructSpecifier  go to state 7
    Specifier        go to state 27
    DefList          go to state 48
    Def              go to state 29


state 25

    6 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 26

   38 DefList: error . SEMI

    SEMI  shift, and go to state 49


state 27

   39 Def: Specifier . DecList SEMI

    ID  shift, and go to state 34

    VarDec   go to state 50
    DecList  go to state 51
    Dec      go to state 52


state 28

    8 StructSpecifier: STRUCT StructName LC DefList . RC

    RC  shift, and go to state 53


state 29

   37 DefList: Def . DefList

    error   shift, and go to state 26
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT       reduce using rule 36 (DefList)
    ID        reduce using rule 36 (DefList)
    FLOAT     reduce using rule 36 (DefList)
    CHAR      reduce using rule 36 (DefList)
    STRING    reduce using rule 36 (DefList)
    LP        reduce using rule 36 (DefList)
    LC        reduce using rule 36 (DefList)
    RC        reduce using rule 36 (DefList)
    SEMI      reduce using rule 36 (DefList)
    MINUS     reduce using rule 36 (DefList)
    NOT       reduce using rule 36 (DefList)
    IF        reduce using rule 36 (DefList)
    WHILE     reduce using rule 36 (DefList)
    RETURN    reduce using rule 36 (DefList)
    FOR       reduce using rule 36 (DefList)
    DPLUS     reduce using rule 36 (DefList)
    DMINUS    reduce using rule 36 (DefList)
    BREAK     reduce using rule 36 (DefList)
    CONTINUE  reduce using rule 36 (DefList)

    StructSpecifier  go to state 7
    Specifier        go to state 27
    DefList          go to state 54
    Def              go to state 29


state 30

   19 FuncDec: ID LP RP .

    $default  reduce using rule 19 (FuncDec)


state 31

   22 ParamDec: Specifier . VarDec

    ID  shift, and go to state 34

    VarDec  go to state 55


state 32

   18 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 56


state 33

   20 VarList: ParamDec .
   21        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 57

    $default  reduce using rule 20 (VarList)


state 34

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


state 35

   15 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 15 (ExtDecList)


state 36

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


state 37

   63 Exp: ID . LP Args RP
   64    | ID . LP RP
   65    | ID .

    LP  shift, and go to state 58

    $default  reduce using rule 65 (Exp)


state 38

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


state 39

   68 Exp: CHAR .

    $default  reduce using rule 68 (Exp)


state 40

   69 Exp: STRING .

    $default  reduce using rule 69 (Exp)


state 41

   60 Exp: LP . Exp RP

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    STRING  shift, and go to state 40
    LP      shift, and go to state 41
    LC      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44
    DPLUS   shift, and go to state 45
    DMINUS  shift, and go to state 46

    Exp  go to state 59


state 42

   72 Exp: LC . Args RC

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    STRING  shift, and go to state 40
    LP      shift, and go to state 41
    LC      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44
    DPLUS   shift, and go to state 45
    DMINUS  shift, and go to state 46

    Exp   go to state 60
    Args  go to state 61


state 43

   61 Exp: MINUS . Exp

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    STRING  shift, and go to state 40
    LP      shift, and go to state 41
    LC      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44
    DPLUS   shift, and go to state 45
    DMINUS  shift, and go to state 46

    Exp  go to state 62


state 44

   62 Exp: NOT . Exp

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    STRING  shift, and go to state 40
    LP      shift, and go to state 41
    LC      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44
    DPLUS   shift, and go to state 45
    DMINUS  shift, and go to state 46

    Exp  go to state 63


state 45

   58 Exp: DPLUS . Exp

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    STRING  shift, and go to state 40
    LP      shift, and go to state 41
    LC      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44
    DPLUS   shift, and go to state 45
    DMINUS  shift, and go to state 46

    Exp  go to state 64


state 46

   59 Exp: DMINUS . Exp

    INT     shift, and go to state 36
    ID      shift, and go to state 37
    FLOAT   shift, and go to state 38
    CHAR    shift, and go to state 39
    STRING  shift, and go to state 40
    LP      shift, and go to state 41
    LC      shift, and go to state 42
    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44
    DPLUS   shift, and go to state 45
    DMINUS  shift, and go to state 46

    Exp  go to state 65


state 47

   17 VarDec: VarDec LB Exp . RB
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   52    | Exp . PLUS ASSIGNOP Exp
   53    | Exp . MINUS ASSIGNOP Exp
   54    | Exp . STAR ASSIGNOP Exp
   55    | Exp . DIV ASSIGNOP Exp
   56    | Exp . DPLUS
   57    | Exp . DMINUS
   70    | Exp . LB Exp RB
   71    | Exp . DOT ID

    RELOP     shift, and go to state 66
    PLUS      shift, and go to state 67
    MINUS     shift, and go to state 68
    STAR      shift, and go to state 69
    DIV       shift, and go to state 70
    ASSIGNOP  shift, and go to state 71
    AND       shift, and go to state 72
    OR        shift, and go to state 73
    LB        shift, and go to state 74
    RB        shift, and go to state 75
    DPLUS     shift, and go to state 76
    DMINUS    shift, and go to state 77
    DOT       shift, and go to state 78


state 48

   23 CompSt: LC DefList . StmList RC

    INT       shift, and go to state 36
    ID        shift, and go to state 37
    FLOAT     shift, and go to state 38
    CHAR      shift, and go to state 39
    STRING    shift, and go to state 40
    LP        shift, and go to state 41
    LC        shift, and go to state 79
    SEMI      shift, and go to state 80
    MINUS     shift, and go to state 43
    NOT       shift, and go to state 44
    IF        shift, and go to state 81
    WHILE     shift, and go to state 82
    RETURN    shift, and go to state 83
    FOR       shift, and go to state 84
    DPLUS     shift, and go to state 45
    DMINUS    shift, and go to state 46
    BREAK     shift, and go to state 85
    CONTINUE  shift, and go to state 86

    $default  reduce using rule 24 (StmList)

    CompSt   go to state 87
    StmList  go to state 88
    Stmt     go to state 89
    Exp      go to state 90


state 49

   38 DefList: error SEMI .

    $default  reduce using rule 38 (DefList)


state 50

   17 VarDec: VarDec . LB Exp RB
   42 Dec: VarDec .
   43    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 91
    LB        shift, and go to state 23

    $default  reduce using rule 42 (Dec)


state 51

   39 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 92


state 52
